Commit chanegs for form eleemnts

--- a/form-element.html
+++ b/form-element.html
@@ -173,7 +173,7 @@
                <!-- Panel Head -->
                <div class="panel-block-head clearfix">
                   <div class="panel-block-icon"><i class="fa fa-home"></i> </div>
-                  <div class="panel-block-heading "> Home</div>
+                  <div class="panel-block-heading "> Add Container Inventory </div>
                   <div class="app-action-group">
                      <a href="#"><i class="fa fa-print"></i></a>
                      <a href="#" class="active"><i class="fa fa-filter"></i></a>
@@ -209,7 +209,7 @@
                   <!--End  Mobile Action Area -->
                </div>
                <div class="panel-block-content no-padding">
-                  <div class="col-md-12" id="form-content">
+                  <div class="col-md-12 " id="form-content">
                      <h2 class="panel-title"></h2>
                   </div>
                </div>
