--- a/dashboard-table-grid.html
+++ b/dashboard-table-grid.html
@@ -12,6 +12,15 @@
     <!-- Favicon icon -->
     <link rel="icon" href="img/favicon.ico">
     <title data-replace="text">{{site_dashboard_title}}</title>
+	 <!-- CSS fiels -->
+	 <link rel="stylesheet" href="css/lib/bootstrap/bootstrap.min.css">
+	 <link rel="stylesheet" href="css/lib/font/font-awesome.min.css">
+	 <link rel="stylesheet" href="css/style.css">
+	 <link rel="stylesheet" href="css/reset.css">
+	 <link rel="stylesheet" href="css/responsive.css">
+	 <link rel="stylesheet" href="css/lib/scrollbar/jquery.mCustomScrollbar.css">
+	 <link rel="stylesheet" href="css/lib/jquery-ui/jquery-ui.css">
+	 <link rel="stylesheet" href="assets/blue/style.css">
 </head>
 
 <body data-reference="page-loader">
