--- a/elements-new.html
+++ b/elements-new.html
@@ -616,7 +616,7 @@
                         </div>
                         <div class="form-col-2">
 
-                            <div class="col-md-6 no-padding p-r-5">
+                            <div class="col-md-6 no-padding p-r-5 error-msg-text">
                                 <div class="dropdown-list validate-details">
 
                                     <div class="selected-listitem">Click Me</div>
@@ -645,7 +645,7 @@
                             <label class="label">Berthing Type : </label>
                         </div>
                         <div class="form-col-2">
-                            <div class="p-r-5">
+                            <div class="p-r-5 error-msg-text">
                                 <div class="dropdown-list  validate-details">
                                     <div class="selected-listitem">Click Me</div>
                                     <ul>
@@ -667,7 +667,7 @@
                             <label class="label">Berthing Type : </label>
                         </div>
                         <div class="form-col-2">
-                            <div class="p-r-5 error-msg-text">
+                            <div class="p-r-5 error-msg-text error-msg-text">
                                 <div class="dropdown-list validate-details">
                                     <div class="selected-listitem">Click Me</div>
                                     <ul>
@@ -723,7 +723,7 @@
                             <label class="label">Vessel Service Code : </label>
                         </div>
                         <div class="form-col-2">
-                            <div class="col-md-6 p-r-5">
+                            <div class="col-md-6 p-r-5 error-msg-text">
                                 <div class="dropdown-list validate-details">
                                     <div class="selected-listitem">Click Me</div>
                                     <ul>
@@ -757,7 +757,7 @@
                         <div class="form-col-1">
                             <label class="label">Service Type : </label>
                         </div>
-                        <div class="form-col-2 p-r-5">
+                        <div class="form-col-2 p-r-5 error-msg-text">
                             <div class="dropdown-list validate-details">
                                 <div class="selected-listitem">Click Me</div>
                                 <ul>
@@ -803,7 +803,7 @@
                         </div>
                          <div class="form-col-2">
 
-                            <div class="col-md-6 no-padding p-r-5">
+                            <div class="col-md-6 no-padding p-r-5 error-msg-text">
                                 <div class="dropdown-list validate-details">
 
                                     <div class="selected-listitem">Click Me</div>
