table grid changes

--- a/table-grid.html
+++ b/table-grid.html
@@ -12,7 +12,16 @@
     <meta name="description" content="{{meta_login_desc}}" data-replace="meta">
     <meta name="keywords" content="{{meta_login_keywords}}" data-replace="meta">
     <meta name="title" content="{{meta_login_title}}" data-replace="meta">
-
+	
+	 <!-- CSS fiels -->
+	 <link rel="stylesheet" href="css/lib/bootstrap/bootstrap.min.css">
+	 <link rel="stylesheet" href="css/lib/font/font-awesome.min.css">
+	 <link rel="stylesheet" href="css/style.css">
+	 <link rel="stylesheet" href="css/reset.css">
+	 <link rel="stylesheet" href="css/responsive.css">
+	 <link rel="stylesheet" href="css/lib/scrollbar/jquery.mCustomScrollbar.css">
+	 <link rel="stylesheet" href="css/lib/jquery-ui/jquery-ui.css">
+	 <link rel="stylesheet" href="assets/blue/style.css">
     <!-- Favicon icon -->
     <link rel="icon" href="img/favicon.ico">
 
@@ -941,7 +950,7 @@
         </div>
             </div>
             <!--End Panel-->
-        </div>
+      
     </section>
     <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
     <!-- Bootstrap Plugin Js -->
