--- a/dashboard.html
+++ b/dashboard.html
@@ -228,8 +228,8 @@
                     </div>
                     <!--End  Mobile Action Area -->
                 </div>
-                <div class="panel-block-content no-padding">
-                <div class="element-sec clearfix ">
+                <div class="panel-block-content no-padding ">
+                <div class="element-sec clearfix padding-bottom-none ">
 					<div class="col-md-3">
 					   <div class="element-block bayplan">
 						  <span class="icon">&nbsp; </span>
