dashboard changes and login html

--- a/dashboard-table-grid.html
+++ b/dashboard-table-grid.html
@@ -204,7 +204,7 @@
                     </div>
 <!-- Mobile Action Area -->
                     <div class="mobile-action-grp-btn">
-                        <div class="action-arrow open" ><a href="#"><i class="fa fa-caret-down"></i></a>
+                        <div class="action-arrow open" ><a href="javascript:void(0);"><i class="fa fa-caret-down"></i></a>
                         </div>
                         <div class="action-grp" style="display:none;">
                             <div class="grid-specific clearfix">
