form element changes

--- a/form-element.html
+++ b/form-element.html
@@ -235,5 +235,8 @@
       <script src="js/general.js"></script>
       <script src="js/lib/form/dform.js"></script>
       <script src="js/init/elements.js"></script>
+	  <script src="js/init/dashboard.js"></script>
+	  <script src="js/init/table-grid.js"></script>
+	  
    </body>
 </html>
