--- a/login.html
+++ b/login.html
@@ -37,9 +37,16 @@
 <section>
 			 <div class="login-container">
     <div class="form clearfix">
-		<form id="frmLogin" name="login_form" method="post">
-			<input type="button" value="Submit">
-		</form>
+		<div class="form-element">
+			<h1 class="user-login">User Login</h1>
+			<form id="frmLogin" name="login_form" method="post">
+			<div class="form-row position-rel">
+			<input type="text" class="text-box" name="email" tabindex="3" placeholder="User Name">
+			<span class="input-icon"><img src="img/icons/user.png"></span>
+			</div>
+				<input type="button" value="Submit">
+			</form>
+		</div>
     </div>
 	</div>
 </section>
