--- a/elements-new.html
+++ b/elements-new.html
@@ -445,15 +445,23 @@
                 </p>
                 <div class="datepicker-row col-md-4">
                     <label class="label">Date:</label>
-                    <input type="text" id="datepicker" class="text-box"></input>
+                    <div class="text-box-icon">
+                        <input type="text" id="datepicker" class="text-box"></input>
+                        <span class="add-on">
+						<i class="fa fa-calendar-o"></i>
+						</span>
+                    </div>
                 </div>
 
                 <div id="datetimepicker3" class="input-append col-md-4">
                     <label class="label">Time:</label>
-                    <input data-format="hh:mm:ss" type="text" class="text-box add-on" data-date-icon="icon-calendar"></input>
-                    <span class="add-on">
-						<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-					</span>
+                    <div class="text-box-icon">
+                        <input data-format="hh:mm:ss" type="text" class="text-box add-on" data-date-icon="icon-calendar">
+                        <span class="add-on">
+							<i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
+						</span>
+
+                    </div>
                 </div>
             </div>
             <div class="col-md-12 panel">
@@ -522,8 +530,8 @@
                         <p>
                             <button class="uie-dropdown-btn" type="button"><i class="fa fa-refresh"></i><span class="action-btn"> Action</span>
                             </button>
-                            <button class="uie-dropdown-btn-click" type="button" onclick="toggle_visibility('uie-dp-menu');"><span></span>
-                                <span class="caret"></span>
+                            <button class="uie-dropdown-btn-click" type="button" onclick="toggle_visibility('uie-dp-menu');">
+                                <i class="fa fa-chevron-down"></i>
                             </button>
                             <div class="uie-dp-menu">
                                 <ul>
@@ -691,7 +699,7 @@
                             <label class="label">Berthing Type : </label>
                         </div>
                         <div class="form-col-2 p-r-5">
-                            <input type="text" class="text-box  validate-details" />
+                            <input type="text" class="text-box  validate-details disable-text-box" disabled />
                             <span class="error-msg right-top">A message may be formatted to display </span>
                         </div>
 
@@ -738,7 +746,7 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
-                                <span class="error-msg right-top">Please enter </span>
+                                <span class="error-msg right-top">A message may be formatted to display</span>
                             </div>
                             <div class="col-md-6 p-r-5">
                                 <input type="text" class="text-box validate-details">
